--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+.idea/
+.git/
+
 ### IntelliJ IDEA ###
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-.idea
-.git
 
 ### Eclipse ###
 .apt_generated
